# airlock

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  eslint.config.js  package-lock.json  package.json  release-please-config.json
.airlock/: lint.sh
.airlock/workflows/: main.yml
.claude/: settings.json
.github/workflows/: ci.yml  release-please.yml
crates/airlock-app/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
crates/airlock-app/fixtures/: index.json
crates/airlock-app/fixtures/get_repos/: all.json
crates/airlock-app/fixtures/get_run_detail/: a43179d6-85bb-45a5-b637-57a75335638c.json  b7e31f4a-multi-job-demo.json  fce62dbf-ad28-4f7e-b3c5-e60d956d73ad.json
crates/airlock-app/fixtures/get_run_diff/: a43179d6-85bb-45a5-b637-57a75335638c.json  b7e31f4a-multi-job-demo.json  fce62dbf-ad28-4f7e-b3c5-e60d956d73ad.json
crates/airlock-app/fixtures/get_runs/: 85960af40743.json
crates/airlock-app/fixtures/read_artifact/: 45f0049a04b04f0d.json  45f0049a04b04f0d.path  a6fb5db9a9aae7cb.json  a6fb5db9a9aae7cb.path  critique-comments.json  patch-add-error-handling.json  patch-add-error-handling.path  patch-fix-import.json  patch-fix-import.path  patch-fix-typos.json  patch-fix-typos.path  patch-lint-fix.json  patch-update-types.json  patch-update-types.path  pr-result.json  push-result-failed.json  push-result-success.json  test-results.json
crates/airlock-app/src/: App.tsx  index.css  main.tsx
crates/airlock-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/airlock-app/src-tauri/capabilities/: default.json
crates/airlock-app/src-tauri/icons/: icon.icns
crates/airlock-app/src-tauri/src/: event_bridge.rs  lib.rs  main.rs
crates/airlock-app/src-tauri/src/ipc/: config.rs  error.rs  intents.rs  mod.rs  operations.rs  repos.rs  runs.rs  types.rs
crates/airlock-app/src-tauri/tests/: e2e_performance.rs
crates/airlock-app/src/components/: ContentSidebar.tsx  Layout.tsx  MermaidDiagram.tsx  StagesSidebar.tsx  TelemetryBar.tsx  UpdateBadge.tsx
crates/airlock-app/src/components/StageLogViewer/: ArtifactSection.tsx  LineTable.tsx  MarkdownViewer.tsx  StageLogViewer.tsx  hooks.ts  utils.ts
crates/airlock-app/src/components/push-request/: ActivityTab.tsx  ChangesTab.tsx  ContentTab.tsx  OverviewTab.tsx  PatchesTab.tsx  PipelineChart.tsx  index.tsx
crates/airlock-app/src/components/push-request/activity-feed/: ActivityFeed.tsx  ArtifactItem.tsx  FeedItem.tsx  StepItem.tsx  build-feed.ts  (+3 more)
crates/airlock-app/src/components/stage-log-viewer/: ArtifactContent.tsx  ArtifactIcon.tsx  LogContent.tsx  LogSection.tsx  MarkdownViewer.tsx  index.tsx
crates/airlock-app/src/hooks/: use-airlock-events.ts  use-auto-navigate.ts  use-daemon-query.ts  use-daemon.ts  use-is-narrow.ts  use-stage-log.ts  use-update-check.ts
crates/airlock-app/src/lib/: artifact-keys.ts  fixtures.ts  mock-data.ts  status-utils.ts  tauri.ts  utils.ts
crates/airlock-app/src/pages/: RepoList.tsx  RunDetail.tsx  Runs.tsx  Settings.tsx
crates/airlock-cli/: Cargo.toml
crates/airlock-cli/src/: main.rs
crates/airlock-cli/src/commands/: cancel.rs  daemon.rs  eject.rs  format.rs  gui.rs  init.rs  init_tests.rs  init_wizard.rs  ipc_client.rs  lookup.rs  mod.rs  nuke.rs  runs.rs  show.rs  status.rs  status_tests.rs
crates/airlock-cli/src/commands/artifact/: comment.rs  content.rs  mod.rs  patch.rs
crates/airlock-cli/src/commands/doctor/: checks.rs  mod.rs
crates/airlock-cli/src/commands/doctor/tests/: database_tests.rs  enrollment_tests.rs  git_tests.rs  helpers.rs  hooks_tests.rs  mod.rs
crates/airlock-cli/src/commands/exec/: agent.rs  await_approval.rs  env.rs  freeze.rs  helpers.rs  json.rs  mod.rs  push.rs  tests.rs
crates/airlock-cli/tests/: daemon_commands.rs  e2e_stage_pipeline.rs
crates/airlock-cli/tests/daemon_commands_tests/: cli_ux.rs  common.rs  daemon_lifecycle.rs  daemon_path.rs  error_messages.rs  init_help.rs  ipc_types.rs  service_manager.rs  socket.rs
crates/airlock-cli/tests/e2e_stage_pipeline_tests/: git_operations.rs  helpers.rs  pipeline_flow.rs  run_state.rs  step_operations.rs  workflow_config.rs  workflow_loading.rs
crates/airlock-core/: Cargo.toml
crates/airlock-core/resources/: airlockd.service  dev.airlock.daemon.plist
crates/airlock-core/src/: error.rs  gui.rs  init.rs  jj.rs  lib.rs  patches.rs  paths.rs  provider.rs  service.rs  types.rs  types_tests.rs  worktree.rs
crates/airlock-core/src/agent/: claude_code.rs  codex.rs  idle_timeout.rs  mod.rs  stream.rs  subprocess.rs  types.rs
crates/airlock-core/src/config/: global.rs  loader.rs  mod.rs  sync.rs  tests.rs  workflow.rs
crates/airlock-core/src/db/: helpers.rs  job_result.rs  mod.rs  repo.rs  run.rs  schema.rs  stage_result.rs  sync_log.rs  tests.rs
crates/airlock-core/src/git/: cmd.rs  diff.rs  fetch.rs  hooks.rs  mod.rs  push.rs  refs.rs  remote.rs  repo.rs  show.rs  tests.rs
crates/airlock-core/src/ipc/: config.rs  diff.rs  events.rs  mod.rs  types.rs
crates/airlock-daemon/: Cargo.toml
crates/airlock-daemon/src/: cleanup.rs  ipc.rs  lib.rs  main.rs  push_coalescer.rs  run_queue.rs  server.rs  stage_loader.rs  sync.rs  worktree_pool.rs
crates/airlock-daemon/src/handlers/: config.rs  forward.rs  init_eject.rs  mod.rs  pipeline.rs  push.rs  runs.rs  status.rs  steps.rs  sync.rs  util.rs
crates/airlock-daemon/src/pipeline/: executor.rs  mod.rs
crates/airlock-fixtures/: Cargo.toml
crates/airlock-fixtures/src/: db_export.rs  main.rs
defaults/create-pr/: step.yml
defaults/critique/: step.yml
defaults/describe/: step.yml
defaults/document/: step.yml
defaults/gate/: step.yml
defaults/lint/: step.yml
defaults/push/: step.yml
defaults/rebase/: step.yml
defaults/test/: step.yml
eslint-rules/: no-dark-mode-classes.js  no-raw-colors.js  no-raw-typography.js  no-tailwind-palette.js
specs/: airlock_design_system_spec.md  airlock_product_spec.md  airlock_technical_spec.md
todos/: agent-context-capture.md  code-signing.md
