[package]
name = "airlock-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for Airlock - shared types, configuration, and utilities"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
git2 = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
claude-agent-sdk-rs = { workspace = true }
serde_yaml = { workspace = true }
rand = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
glob-match = "0.2"
libc = { workspace = true }
ureq = "3"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
