[package]
name = "airlock-app"
version = "0.1.0"
description = "Airlock Desktop Application"
authors = ["Airlock Team"]
license = "MIT"
repository = "https://github.com/airlock-hq/airlock"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "airlock_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Async runtime (for IPC)
tokio = { version = "1", features = ["full"] }

# IPC communication with daemon
interprocess = { version = "2", features = ["tokio"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Airlock core (shared types)
airlock-core = { path = "../../airlock-core" }

[dev-dependencies]
tempfile = "3"
